ci do not install recommended packages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           apt update
           apt -y full-upgrade
-          apt -y install  \
+          apt -y --no-install-recommends install  \
               git openssh-client  \
               cmake clang clang-format clang-tidy lld ninja-build python3
 
