--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           apt -y full-upgrade
           apt -y --no-install-recommends install  \
               git ca-certificates  \
-              cmake clang clang-format clang-tidy lld ninja-build python3
+              cmake clang clang-format clang-tidy g++ lld ninja-build python3
 
       - name: Dump packages versions
         run: |
