--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,10 @@ jobs:
           git clone "https://github.com/${{ github.repository }}" "."
           git checkout "${{ github.sha }}"
 
+      - name: "Patch: disable LTO"  # cannot reproduce locally
+        run: |
+          (Get-Content "cmake/cpp_flags.cmake") -replace "-flto=thin", "" | Set-Content "cmake/cpp_flags.cmake"
+
       - name: Configure
         shell: cmd
         env:
