explicitely set cc in linux ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,11 @@ jobs:
           CXXFLAGS: -fdiagnostics-color=always
           LDFLAGS: -fdiagnostics-color=always
         run: |
+          if [ "${{ matrix.cxx }}" = "clang++" ]; then
+            export CC="clang"
+          elif [ "${{ matrix.cxx }}" = "g++" ]; then
+            export CC="gcc"
+          fi
           cmake -G Ninja -D "CMAKE_BUILD_TYPE=${{ matrix.build_type }}" -S "." -B "build"
 
       - name: Build
