ci keep all artifacts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: deb-${{ matrix.cxx }}-${{ matrix.build_type }}
           path: build/kae/kae_test
 
       - name: Test
@@ -72,7 +73,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type: ["Debug", "Release"]
-        cxx: ["cl", "clang++"]
+        cxx: ["clang++", "cl"]
     runs-on: windows-latest
     env:
       VCVARS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
@@ -119,6 +120,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
+          name: win-${{ matrix.cxx }}-${{ matrix.build_type }}
           path: build/kae/kae_test.exe
 
       - name: Test
