--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: deb-${{ matrix.cxx }}-${{ matrix.build_type }}
+          name: deb-${{ matrix.cc }}-${{ matrix.build_type }}
           path: build/kae/kae_test
 
       - name: Test
@@ -130,7 +130,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: win-${{ matrix.cxx }}-${{ matrix.build_type }}
+          name: win-${{ matrix.cc }}-${{ matrix.build_type }}
           path: build/kae/kae_test.exe
 
       - name: Test
