add message context

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,24 @@ include("kae/cpp_warnings")
 
 
 if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    set(IS_ROOT_LISTS ON)
+    set(IS_ROOT_LIST ON)
 else ()
-    set(IS_ROOT_LISTS OFF)
+    set(IS_ROOT_LIST OFF)
 endif ()
 
 
-option(KAE_TESTS "Build tests" ${IS_ROOT_LISTS})
-option(KAE_AUTO_COMPILERS "Automatically override compilers" ${IS_ROOT_LISTS})
-option(KAE_AUTO_FLAGS "Automatically override flags" ${IS_ROOT_LISTS})
+option(KAE_TESTS "Build tests" ${IS_ROOT_LIST})
+option(KAE_AUTO_COMPILERS "Automatically override compilers" ${IS_ROOT_LIST})
+option(KAE_AUTO_FLAGS "Automatically override flags" ${IS_ROOT_LIST})
 
 
-if (IS_ROOT_LISTS AND NOT CMAKE_BUILD_TYPE)
+if (IS_ROOT_LIST AND NOT CMAKE_BUILD_TYPE)
     message(STATUS "defaulting CMAKE_BUILD_TYPE to Debug")
     set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "")
+endif ()
+if (IS_ROOT_LIST AND NOT CMAKE_MESSAGE_CONTEXT_SHOW)
+    message(STATUS "defaulting CMAKE_MESSAGE_CONTEXT_SHOW to ON")
+    set(CMAKE_MESSAGE_CONTEXT_SHOW ON CACHE BOOL "")
 endif ()
 
 if (KAE_AUTO_COMPILERS)
@@ -44,7 +48,7 @@ endif ()
 
 if (KAE_TESTS)
     enable_testing()
-    if (IS_ROOT_LISTS)
+    if (IS_ROOT_LIST)
         find_package("Python3" REQUIRED "Interpreter")
         add_test(NAME "check_clang_format"
             COMMAND "${Python3_EXECUTABLE}" "${PROJECT_SOURCE_DIR}/check_clang_format.py"
