move check scripts to cmake dir

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,5 +143,5 @@ jobs:
             set "PATH=C:\\Program Files\\LLVM\\bin;%PATH%"
             ctest --verbose
           ) else (
-            ctest --verbose -E "check_clang_.*"
+            ctest --verbose -E "clang_.*"
           )
