prefer llvm tools when compiling with clang

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,6 +103,7 @@ jobs:
           )
 
       - name: Dump tools versions
+        shell: cmd
         run: |
           call "%VCVARS%"
           git --version
