--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
     steps:
       - name: Install system dependencies
         run: |
+          echo "Dpkg::Use-Pty 0;" > /etc/apt/apt.conf.d/no_pty
           apt update
           apt -y full-upgrade
           apt -y --no-install-recommends install  \
