--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,7 @@
 on: [pull_request, push]
 
 env:
+  GCC_VERSION: "10"
   LLVM_VERSION: "10"
 
 jobs:
@@ -11,12 +12,12 @@ jobs:
         build_type: [Debug, Release]
         cc: [clang, gcc]
         include:
-          - cc: clang
-            cxx: clang++
-            cxx_packages: clang-$LLVM_VERSION libstdc++-10-dev
-          - cc: gcc
-            cxx: g++
-            cxx_packages: g++-10
+          - cc: clang-$LLVM_VERSION
+            cxx: clang++-$LLVM_VERSION
+            cxx_packages: clang-$LLVM_VERSION libstdc++-$GCC_VERSION-dev
+          - cc: gcc-$GCC_VERSION
+            cxx: g++-$GCC_VERSION
+            cxx_packages: g++-$GCC_VERSION
     runs-on: ubuntu-latest
     container:
       image: debian:bullseye-slim
@@ -31,8 +32,6 @@ jobs:
               cmake ninja-build python3  \
               clang-format-$LLVM_VERSION clang-tidy-$LLVM_VERSION lld-$LLVM_VERSION llvm-$LLVM_VERSION  \
               ${{ matrix.cxx_packages }}
-          ln -s "clang-$LLVM_VERSION" "/usr/bin/clang"
-          ln -s "clang++-$LLVM_VERSION" "/usr/bin/clang++"
           ln -s "clang-format-$LLVM_VERSION" "/usr/bin/clang-format"
           ln -s "clang-tidy-$LLVM_VERSION" "/usr/bin/clang-tidy"
 
