--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 on: [pull_request, push]
 
 env:
-  GCC_VERSION: "10"
-  LLVM_VERSION: "10"
+  LLVM_VERSION: 10
 
 jobs:
   build_debian:
@@ -14,13 +13,15 @@ jobs:
         include:
           - cc: clang-$LLVM_VERSION
             cxx: clang++-$LLVM_VERSION
-            cxx_packages: clang-$LLVM_VERSION libstdc++-$GCC_VERSION-dev
+            cxx_packages: clang-$LLVM_VERSION libstdc++-$GCC_VERSION-dev lld-$LLVM_VERSION llvm-$LLVM_VERSION
           - cc: gcc-$GCC_VERSION
             cxx: g++-$GCC_VERSION
             cxx_packages: g++-$GCC_VERSION
     runs-on: ubuntu-latest
     container:
       image: debian:bullseye-slim
+    env:
+      GCC_VERSION: 10
     steps:
       - name: Install system dependencies
         run: |
@@ -30,7 +31,7 @@ jobs:
           apt -y --no-install-recommends install  \
               git ca-certificates  \
               cmake ninja-build python3  \
-              clang-format-$LLVM_VERSION clang-tidy-$LLVM_VERSION lld-$LLVM_VERSION llvm-$LLVM_VERSION  \
+              clang-format-$LLVM_VERSION clang-tidy-$LLVM_VERSION  \
               ${{ matrix.cxx_packages }}
           ln -s "clang-format-$LLVM_VERSION" "/usr/bin/clang-format"
           ln -s "clang-tidy-$LLVM_VERSION" "/usr/bin/clang-tidy"
