--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,18 +97,19 @@ jobs:
           - cc: cl
             cxx: cl
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: cmd
     env:
       VCVARS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
     steps:
       - name: Install system dependencies
-        shell: cmd
         run: |
           if "${{ matrix.cc }}"=="clang" (
             choco install llvm --version=%LLVM_VERSION%.0.0
           )
 
       - name: Dump tools versions
-        shell: cmd
         run: |
           call "%VCVARS%"
           git --version
@@ -116,18 +117,15 @@ jobs:
           ninja --version
 
       - name: Checkout
-        shell: cmd
         run: |
           git clone "https://github.com/${{ github.repository }}" "."
           git checkout "${{ github.sha }}"
 
       - name: Register problem matchers
-        shell: cmd
         run: |
           echo ::add-matcher::.github/problem_matchers.json
 
       - name: Configure
-        shell: cmd
         env:
           CC: ${{ matrix.cc }}
           CXX: ${{ matrix.cxx }}
@@ -137,7 +135,6 @@ jobs:
           cmake -G Ninja -D "CMAKE_BUILD_TYPE=${{ matrix.build_type }}" -S "." -B "build"
 
       - name: Build
-        shell: cmd
         run: |
           call "%VCVARS%"
           ninja -C "build"
@@ -156,7 +153,6 @@ jobs:
           path: build/bin
 
       - name: Test
-        shell: cmd
         run: |
           cd "build"
           if "${{ matrix.cc }}"=="clang" (
